src/background/css/sidebar.styl
@import "nib";

/* Sidebar
 */

.sidebar-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    width: $sidebarWidth;
    height: 100%;
    padding: 0 emCalc(20) 0 0;

    .sidebar-container {
        overflow-y: auto;
        height: 100%;
        padding-left: 10px;
        padding-bottom: 100px;

        .title {
            padding: 10px 10px 5px 10px;
            h4 {
                margin-bottom: 0;
            }
        }

        .template-tab {
            margin-top: 10px;
        }

        .nav-stacked {
            margin: 0;
            li > a {
                font-weight: bold;
                font-size: 1.1em;
            }
        }

        .tag {
            font-size: 1.2em !important;
        }

        .tags-wrapper a {
            padding: 3px 15px;
        }
    }

    .sidebar-footer {
        position: fixed;
        bottom: 0;
        left: 0;
        width: 210px;
        height: 80px;
        background: #fff;
        padding: emCalc(16) 0 emCalc(20) 16px;
        //border-top: 1px solid #e5e5e5;

        .anonymous,
        .profile-body {
            margin-bottom: emCalc(28);
        }

        /* Profile
        */
        .profile {
            text-align: center;
            float: left;
            width: 165px;

            .profile-body {
                clearfix();

                .profile-picture {
                    padding: 0;

                    img {
                        max-width: emCalc(80);
                        float: left;
                    }
                }



                .profile-details {
                    padding: 0;
                    cursor: default;

                    p {
                        margin: 0;
                        color: lighten($black, 20%);
                        text-align: left;

                        strong {
                            font-size: emCalc(20);
                            color: $black;
                        }
                    }
                }
            }
        }
        .tools {
            float: right;
            a {
                color: #333;
            }

            .settings-icon {
                font-size: 1.5em;
            }
        }
    }
}

.support-link {
    text-align: center;
    margin: 0 auto !important;
    margin-top: 24px !important;
    padding: 3px;
    width: 200px;
    border: 1px solid $grey1 !important;
    border-radius: 5px;
}

